--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>fhj.swd.schugale13.bac1</groupId>
     <artifactId>MyJavaAPP1</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-    
+
 </project>
